--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-autoconfigure</artifactId>
+          <version>2.4.4</version>
+      </dependency>
   </dependencies>
 
   <build>
